--- a/week1/stylesheets/styles.css
+++ b/week1/stylesheets/styles.css
@@ -6,3 +6,42 @@ html {
   font-family: 'Raleway', sans-serif;
   font-size: 20px;
 }
+
+body {
+  font-size: 16px;
+  background: rgb(149, 194, 215);
+}
+
+.thumbnail-list {
+  list-style: none;
+  padding: 0;
+}
+
+.thumbnail-image {
+  display: block;
+  width: 50%;
+}
+
+.thumbnail-item + .thumbnail-item {
+  margin-top: 10px;
+}
+
+.thumbnail-item {
+  display: block;
+  border: 1px solid rgb(100%, 100%, 100%);
+  border: 1px solid rgba(100%, 100%, 100%, 0.8);
+}
+
+.thumbnail-href {
+  text-decoration: none;
+}
+
+.thumbnail-title {
+  display: block;
+  margin: 0;
+  padding: 4px 10px;
+  background: rgb(96, 125, 139);
+  color: rgb(202, 238, 255);
+
+  font-size: 18px;
+}
