--- a/week1/stylesheets/styles.css
+++ b/week1/stylesheets/styles.css
@@ -1,4 +1,34 @@
+button {
+  /* This extra margin represent roughly the same space as the space
+     between the labels and their text fields */
+  margin-left: .5em;
+}
+
+body {
+  background: rgb(149, 194, 215);
+  font-size: 16px;
+}
+
+form {
+  border: 1px solid #CCC;
+  border-radius: 1em;
+  margin: 0 auto;
+  padding: 1em;
+  width: 400px;
+}
+
+form ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+form li + li {
+  margin-top: 1em;
+}
+
 h1 {
+  padding: 30px;
   text-align: center;
 }
 
@@ -7,9 +37,70 @@ html {
   font-size: 20px;
 }
 
-body {
-  font-size: 16px;
-  background: rgb(149, 194, 215);
+input, textarea {
+  border: 1px solid #999;
+  box-sizing: border-box;
+  font: 1em sans-serif;
+  width: 300px;
+}
+
+label {
+  display: inline-block;
+  text-align: right;
+  width: 90px;
+}
+
+textarea {
+  /* Align multiline text fields with their labels */
+  vertical-align: top;
+
+  /* Provide space to type some text */
+  height: 5em;
+}
+
+.active {
+  background-color: #4CAF50;
+}
+
+.button {
+  /* Align buttons with the text fields */
+  padding-left: 90px; /* same size as the label elements */
+}
+
+.detail-image {
+  width: 50%;
+}
+
+/* .form-contact ul {
+  list-style: none;
+} */
+
+.nav-top {
+  background-color: #333;
+  list-style-type: none;
+  margin: 0;
+  overflow: hidden;
+  padding: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.nav-top li {
+  border-right: 1px solid #bbb;
+  float: left;
+}
+
+.nav-top li a, .nav-top li strong {
+  color: white;
+  display: block;
+  padding: 14px 16px;
+  text-align: center;
+  text-decoration: none;
+}
+
+.nav-top li a:hover, .nav-top li strong:hover {
+  background-color: #111;
 }
 
 .thumbnail-list {
@@ -22,14 +113,14 @@ body {
   width: 50%;
 }
 
-.thumbnail-item + .thumbnail-item {
+.thumbnail-item+.thumbnail-item {
   margin-top: 10px;
 }
 
 .thumbnail-item {
-  display: block;
   border: 1px solid rgb(100%, 100%, 100%);
   border: 1px solid rgba(100%, 100%, 100%, 0.8);
+  display: block;
 }
 
 .thumbnail-href {
@@ -37,11 +128,10 @@ body {
 }
 
 .thumbnail-title {
-  display: block;
-  margin: 0;
-  padding: 4px 10px;
   background: rgb(96, 125, 139);
   color: rgb(202, 238, 255);
-
+  display: block;
   font-size: 18px;
+  margin: 0;
+  padding: 4px 10px;
 }
