--- a/week1/stylesheets/styles.css
+++ b/week1/stylesheets/styles.css
@@ -1,34 +1,10 @@
-button {
-  /* This extra margin represent roughly the same space as the space
-     between the labels and their text fields */
-  margin-left: .5em;
-}
-
 body {
   background: rgb(149, 194, 215);
   font-size: 16px;
 }
 
-form {
-  border: 1px solid #CCC;
-  border-radius: 1em;
-  margin: 0 auto;
-  padding: 1em;
-  width: 400px;
-}
-
-form ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-form li + li {
-  margin-top: 1em;
-}
-
 h1 {
-  padding: 50px;
+  padding: 80px;
   text-align: center;
 }
 
@@ -37,80 +13,24 @@ html {
   font-size: 20px;
 }
 
-input, textarea {
-  border: 1px solid #999;
-  box-sizing: border-box;
-  font: 1em sans-serif;
-  width: 300px;
+.alt-ul-bullet {
+  list-style-type: circle;
 }
 
-label {
-  display: inline-block;
-  text-align: right;
-  width: 90px;
+.alt-ol-bullet {
+  list-style-type: lower-greek;
 }
 
-nav ul {
-  background-color: #333;
+.detail-image-container {
   display: flex;
-  list-style-type: none;
-  margin: 0;
-  position: fixed;
-  top: 0;
-  width: 100%;
+  justify-content: center;
 }
 
-textarea {
-  /* Align multiline text fields with their labels */
-  vertical-align: top;
-
-  /* Provide space to type some text */
-  height: 5em;
-}
-
-.active {
-  background-color: #4CAF50;
-}
-
-.button {
-  /* Align buttons with the text fields */
-  padding-left: 90px; /* same size as the label elements */
-}
-
-.detail-image {
-  width: 50%;
-}
-
-/* .form-contact ul {
-  list-style: none;
-} */
-
-/* .nav-top {
-  background-color: #333;
-  list-style-type: none;
-  margin: 0;
-  overflow: hidden;
-  padding: 0;
-  position: fixed;
-  top: 0;
-  width: 100%;
-} */
-
-.nav-top li {
-  border-right: 1px solid #bbb;
-  float: left;
-}
-
-.nav-top li a, .nav-top li strong {
-  color: white;
-  display: block;
-  padding: 14px 16px;
-  text-align: center;
-  text-decoration: none;
-}
-
-.nav-top li a:hover, .nav-top li strong:hover {
-  background-color: #111;
+.my-name {
+  /* display: inline; */
+  color: red;
+  font-family: 'Tangerine', serif;
+  font-size: 48px;
 }
 
 .thumbnail-list {
@@ -144,4 +64,9 @@ textarea {
   font-size: 18px;
   margin: 0;
   padding: 4px 10px;
+}
+
+.super-link:hover {
+  color: red;
+  font-size: 60px;
 }
